<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fff" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="启动服务"
            android:textColor="#000" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="停止服务"
            android:textColor="#000" />

        <Button
            android:id="@+id/editToUI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="返回"
            android:textColor="#000" />
    </LinearLayout>

    <EditText
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sms_number"
        android:inputType="phone"
        android:textColor="#000" />

    <Button
        android:id="@+id/keyBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cor_key"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sms_content"
        android:textColor="#000" />

    <Button
        android:id="@+id/uniqueBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_send" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/infoText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000" />
    </ScrollView>

</LinearLayout>